--- a/src/Pomo.scss
+++ b/src/Pomo.scss
@@ -1,7 +1,9 @@
 body {
-  background-color: #1A1B24;
+  background-color: #0F1318;
   margin: 0;
   padding: 0;
+
+  
 }
 
 .navbar {
@@ -63,19 +65,19 @@ body {
   margin: 0 10px;
   padding: 10px 20px;
   font-size: 16px;
-  border: none;
   background-color: transparent;
   color: #ADADB0;
   border-radius: 24px;
   border: 2px solid #515259;
   cursor: pointer;
+  
 }
 
 .tab-container>Button.active-tab {
-  background-color: #BEE3F8;
-  color: #1A365D;
+  background-color: #126196;
+  color: #fff;
   border-radius: 24px;
-  border-color: #3182CE;
+  border-color: #206a9c;
 }
 
 .control-btn {
@@ -83,13 +85,13 @@ body {
   gap: 21px;
   justify-content: center;
   position: absolute;
-  top: 93%;
+  top: 84%;
 }
 
 .timer-text {
   text-align: center;
   position: absolute;
-  top: 202px;
+  top: 205px;
   font-size: 55px;
   font-weight: bold;
   color: #fff;
@@ -114,35 +116,30 @@ body {
   height: 55px;
   font-weight: bold;
   width: 54px;
-  background-color: #2c2d35;
   color: white;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: #1e1f33;
 }
 
 .App {
   margin-left: auto;
   margin-right: auto;
+  
 }
 
-@media (max-width: 576px) {
 
-  .App {
-    width: max-content;
-
-  }
-
-}
 
 
 .Todo-section {
-  background: #23242d;
+ 
+  padding: 0px 10px 0px 10px;
   border-radius: 8px;
   width: 546px;
   margin-right: auto;
   margin-left: auto;
-  border: 1px solid #42424a;
+  max-width: -webkit-fill-available ;
 }
 
 .task-title {
@@ -166,11 +163,11 @@ body {
 
 .todo-header {
   display: flex;
-  color: white;
+  color: rgb(211, 211, 213);;
   justify-content: space-between;
   font-size: 18px;
-  border-bottom: 3px solid #44454c;
-  padding-left: 12px;
+  font-family: sans-serif;
+  align-items: center;
 }
 
 
@@ -185,48 +182,50 @@ body {
 }
 
 .add-task-section {
-  padding: 8px;
+  padding: 17px 0px 17px 0px;
+
 }
 
 .add-task-content {
-  background: #1b1b22;
-  padding: 12px;
-  width: 486px;
-  margin-right: auto;
-  border: 1px solid #3f3f45;
-  margin-left: auto;
+ 
+  max-width: -webkit-fill-available;
+  display: flex;
+  gap: 10px;
 }
 
 
 
 .add-task-content input {
-  background: #24242b;
-  border: 1px solid #3f3f45;
-  width: 463px;
-  padding: 10px;
+  padding: 16px;
+  border: 1px dashed #35393d;
+  background: transparent;
   color: white;
 }
 
 .add-btn {
   border: none;
-  margin-left: 416px;
-  margin-top: 10px;
-  margin-top: 14px;
   padding: 10px;
   width: 70px;
-  background: #48bb78;
+  background:  #23d46d ;
   border-radius: 6px;
   color: white;
+  cursor: pointer;
 }
 
+.trash-btn {
+  font-size: 18px !important;
+
+}
 
 .task-delete-btn {
-  width: 72px;
-  height: 32px;
+  font-size: 24px;
   border-radius: 6px;
   background: transparent;
-  border: 1px solid #525257;
-  color: #88888c;
+  border: none;
+  color: #646669;
+  cursor: pointer;
+  margin-left: 5px;
+
 }
 
 .delete-section {
@@ -240,8 +239,10 @@ body {
   display: flex;
   justify-content: space-between;
   padding: 10px;
-  border-bottom: 1px dotted #42424a;
   align-items: center;
+  background: #191c21;
+  border-radius: 5px;
+  margin-top: 10px;
 }
 
 .task-contents {
@@ -253,13 +254,14 @@ body {
 
 .task-text {
   text-decoration: none;
-  color: rgb(211, 211, 213);
+  color: #626669;
   overflow: hidden;
 }
 
 .task-buttons {
   margin-top: 3px;
-  color: #14b270;
+  color: #6c6e71;
+  cursor: pointer;
 
 }
 
@@ -279,4 +281,223 @@ font-size: 14px;
  {
   outline: none;
   border: none;
+}
+
+@media only screen and (max-width:400px) {
+  .pomodoro-app {
+    max-width: 380px;
+  }
+
+  .add-task-content {
+      display: flex;
+  }
+  
+ 
+  
+  .add-btn {
+    margin-top: 0;
+    margin-left: 10px !important;
+  }
+  
+ 
+}
+
+
+
+.task-delete-btn:hover {
+background-color: #1A1B24;
+}
+
+.button:hover {
+  background-color: #151b21 ;
+}
+.longBreakbutton:hover {
+  background-color: #151b21;
+}
+
+.add-btn:hover {
+  background-color: #48bb78;
+}
+
+.setting-svg {
+  height: 27px;
+}
+
+.setting-btn {
+  background: transparent;
+  border: none;
+  font-size: 19px !important;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+
+}
+
+.setting-btn:hover {
+  background: #151b21;
+}
+
+.modal {
+  display: flex; 
+  position: fixed; 
+  z-index: 1; 
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+ 
+  background-color: rgba(0,0,0,0.4); 
+  padding-top: 60px;
+}
+
+.modal-content {
+  color: rgb(34, 34, 34);
+  border-radius: 8px;
+  background-color: #0F1318;
+  position: relative;
+  max-width: 400px;
+  width: 95%;
+  z-index: 2147483647;
+  transition: all 0.2s ease-in 0s;
+  transform: translateY(20px);
+  overflow: hidden;
+  margin: auto;
+  display: block;
+  padding: 10px;
+}
+
+
+.close {
+  color: rgb(170, 170, 170);
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #aaaaaadb;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+
+.setting-title {
+  font-size: 15px;
+    color: rgb(170, 170, 170);
+    font-weight: bold;
+    border-bottom: 1px solid #222020;
+    text-align: center;
+    padding-bottom: 10px;
+
+}
+
+.settings-header {
+  display: flex;
+  align-items: center;
+  float: l;
+  justify-content: space-between;
+}
+
+.setting-timer-subtitle {
+  gap: 6px;
+  font-size: 14px;
+    color: rgb(170, 170, 170);
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 0.8px;
+    margin-top: 22px;
+    margin-bottom: 10px;
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+}
+
+.set-timer-section {
+  display: flex;
+  justify-content: space-between;
+}
+
+.set-timer-title {
+  display: block;
+    font-size: 14px;
+    color: rgb(170, 170, 170);
+font-family: sans-serif;
+    margin-bottom: 4px;
+}
+.set-timer-inp {
+  border-radius: 6px;
+ background-color: #191c21;
+  font-size: 16px;
+  padding: 10px;
+  box-shadow: none;
+  border: 1px solid #35393d;
+  color: rgb(85, 85, 85);
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.set-timer-customize-section {
+  padding: 10px 1px 10px 2px;
+  
+}
+
+.setting-ok {
+  text-align: center;
+  border-radius: 4px;
+  cursor: pointer;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 2px;
+  color: white;
+  opacity: 0.9;
+  font-size: 14px;
+  padding: 8px 12px;
+  min-width: 70px;
+  background-color:rgb(34, 34, 34);
+  border: 2px solid rgb(34, 34, 34);
+float: right;
+}
+.setting-ok:hover {
+  background: rgb(23, 23, 23);
+}
+
+.section-header-section {
+  border-bottom: 1px solid rgb(238, 238, 238);
+}
+
+
+.task-input {
+  max-width: -webkit-fill-available;
+}
+
+
+.task-input:focus {
+  outline:  none;
+}
+
+.task-item {
+outline: 1px solid #35393d;
+}
+
+
+.task-input {
+  width: 100%;
+  border: none;
+  background:  #191c21;
+  color: white;
+}
+
+@media  (max-width: 480px) {
+ 
+  .tab-container > Button {
+  margin: 3px;
+ 
+  padding: 11px 13px;
+  }
+}
+
+@media only screen and (max-width: 360px) {
+  .tab-container > Button {
+    padding: 11px 3px;
+    }
 }
